tests/testdata/fmt/parse_error/parse_error.ts
// a file that purposefully will cause an error
class Test
